Add docker config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-asgiref==3.2.3
+asgiref==3.8.1
 astroid==2.3.3
 beautifulsoup4==4.8.2
+bleach==6.2.0
 boto3==1.14.0
 botocore==1.17.0
 certifi==2019.11.28
 chardet==3.0.4
 dj-stripe==2.3.0
-Django==3.0.4
+django==3.2.25
 django-appconf==1.0.4
 django-crispy-forms==1.9.1
 django-debug-toolbar==2.2
@@ -20,30 +21,36 @@ django-totd==1.0.2
 djangorestframework==3.11.1
 docutils==0.15.2
 dulwich==0.18.6
-feedparser==5.2.1
+feedparser==6.0.11
 grimoirelab-toolkit==0.1.10
 idna==2.9
 isort==4.3.21
 jmespath==0.10.0
-joblib==0.14.1
+joblib==1.4.2
 jsonfield==3.1.0
 lazy-object-proxy==1.4.3
+markdown==3.7
 mccabe==0.6.1
+# mysqlclient required for mysql/mariadb
+#mysqlclient==2.2.6
 names==0.3.0
-#numpy==1.18.2
+numpy==2.0.2
 oauthlib==3.1.0
 perceval==0.12.24
 pilkit==2.0
-Pillow>=8.0
+pillow==11.0.0
 pylint==2.4.4
+# psycopg2 required for postgres
+#psycopg2==2.9.10
+python-dotenv==1.0.1
 python-dateutil==2.8.1
 python-lorem==1.1.2
 pytz==2019.3
 requests==2.23.0
 requests-oauthlib==1.3.0
 s3transfer==0.3.3
-#scikit-learn==0.22.2.post1
-#scipy==1.4.1
+scikit-learn==1.5.2
+scipy==1.13.1
 six==1.14.0
 soupsieve==2.0
 sqlparse==0.3.1
