--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ django-totd==1.0.2
 djangorestframework==3.11.2
 docutils==0.15.2
 dulwich==0.18.6
-feedparser==5.2.1
+feedparser==6.0.11
 grimoirelab-toolkit==0.1.10
 idna==2.9
 isort==4.3.21
@@ -55,3 +55,4 @@ wrapt==1.11.2
 django-ical==1.7.1
 icalendar==4.0.7
 django-markdownify==0.9.0
+setuptools==78.1.0
